1.0.6:

2006-10-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/utils.cc: string_separate(): Correct an if so that 
	we really check for quoted separators when specified. This fixes a loss 
	of rows when adding example data from an example glom file.

2006-09-23  Murray Cumming  <murrayc@murrayc.com>
  
	* glom/libglom/document/document_glom.cc:
	* glom/libglom/document/document_glom.h: Override set_file_uri() to avoid 
	the call to set_modified() triggering a save of the file to the old filename.
	This is necessary because we override/hack set_modified().

2006-09-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/db_adddel.cc:
	* glom/utility_widgets/db_adddel/db_adddel.h: Added get_fixed_cell_height().
	construct_specified_columns() Use CellRenderer::set_fixed_size(), using 
	get_fixed_cell_height(), which asks Pango how high some example text should 
	be. This should prevent multiline rows, and might be necessary for optimization.

This is the glom-1-0 branch. See the HEAD branch for new features.

1.0.5:

2006-09-11  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc:  Base_DB::create_table(): Quote the field names to avoid a postgres error when 
	creating the table with an id field based on a table name with special characters such as -.

2006-09-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/user-guide/C/glom.xml: Fixed some validation problems.
	* examples/Makefile.am: Add all example files to EXTRA_DIST, to fix distcheck.

2006-09-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/fields/box_db_table_definition.h:
	* glom/mode_design/fields/box_db_table_definition.cc: Moved some checks from on_adddel_changed() 
	to check_field_change(), and added a check for an existing primary key, so we can give a nice 
	refusal warning to the user instead of a postgres error. This is then used from on_adddel_changed() 
	and on_Properties_apply(). Bug #350636.

2006-09-09  Murray Cumming  <murrayc@murrayc.com>
